--- a/app/src/main/res/layout/activity_detalle_pedido.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido.xml
@@ -39,16 +39,52 @@
                     android:textAlignment="center"
                     android:layout_height="wrap_content"/>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:text=""
                     android:layout_marginTop="20dp"
-                    android:id="@+id/detalleNumPedido"
-                    android:textAlignment="center"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:layout_height="wrap_content"/>
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="#"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:id="@+id/detalleNumPedido"
+                        android:textAlignment="center"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="Estado : "
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:id="@+id/detalleEstado"
+                        android:textSize="18sp"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <Button
@@ -415,7 +451,6 @@
         android:id="@+id/linearProductos"
         android:orientation="vertical"
         android:background="#fff"
-        android:visibility="invisible"
         android:layout_height="match_parent">
 
         <com.github.florent37.shapeofview.shapes.DiagonalView
