--- a/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
@@ -39,17 +39,87 @@
                     android:textAlignment="center"
                     android:layout_height="wrap_content"/>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:text=""
                     android:layout_marginTop="20dp"
-                    android:id="@+id/detalleNumPedido"
-                    android:textAlignment="center"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:layout_height="wrap_content"/>
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="#"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:id="@+id/detalleNumPedido"
+                        android:textAlignment="center"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="left"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text="Estado : "
+                        android:textColor="#fff"
+                        android:textSize="18sp"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:id="@+id/detalleEstado"
+                        android:textSize="18sp"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+
             </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_gravity="top|right"
+                android:layout_marginRight="8dp"
+                android:padding="5dp"
+                android:layout_marginTop="60dp"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/btnEstado"
+                    android:layout_width="wrap_content"
+                    android:text="Cambiar\nestado\nde\npedido"
+                    android:onClick="showPopupEstado"
+                    android:background="@drawable/notanredondo"
+                    android:textColor="#fff"
+                    android:backgroundTint="#239B56"
+                    android:layout_height="wrap_content"/>
+
+                <Button
+                    android:id="@+id/btnReporte"
+                    android:layout_width="wrap_content"
+                    android:text="Reportar\nProblema"
+                    android:onClick="onClickLlamada"
+                    android:drawableLeft="@drawable/telefonopeque"
+                    android:background="@drawable/notanredondo"
+                    android:textColor="#fff"
+                    android:textSize="12sp"
+                    android:backgroundTint="#000000"
+                    android:layout_height="wrap_content"/>
+
+            </RelativeLayout>
+
 
         </com.github.florent37.shapeofview.shapes.ArcView>
 
@@ -355,7 +425,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:gravity="center"
                     android:layout_marginTop="15dp"
                     android:layout_marginBottom="10dp"
@@ -366,13 +436,14 @@
                         android:text="Dirección :"
                         android:textSize="16sp"
                         android:textColor="#000"
-                        android:layout_marginRight="5dp"
                         android:layout_height="wrap_content"/>
 
                     <TextView
                         android:id="@+id/detalleDireccionCliente"
                         android:layout_width="wrap_content"
                         android:textColor="#000"
+                        android:padding="7dp"
+                        android:gravity="center"
                         android:textSize="16sp"
                         android:textStyle="bold"
                         android:layout_height="wrap_content"/>
