--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".paquetes.Actividades.Logins.LoginAdmin">
 
     <include layout="@layout/toolbar2"/>
@@ -58,6 +59,8 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
+                app:passwordToggleEnabled = "true"
+                app:passwordToggleDrawable="@drawable/pass"
                 android:layout_marginLeft="5dp"
                 android:layout_height="wrap_content">
 
