--- a/app/src/main/res/layout/activity_detalle_pedido.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido.xml
@@ -430,21 +430,77 @@
                     android:gravity="center"
                     android:textStyle="bold"
                     android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/detalleLatitud"
+                    android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_height="0dp"/>
+
+                <TextView
+                    android:id="@+id/detalleLongitudd"
+                    android:layout_width="wrap_content"
+                    android:textColor="#000"
+                    android:gravity="center"
+                    android:textStyle="bold"
+                    android:layout_height="0dp"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:elevation="6dp"
+                android:padding="8dp"
+                android:gravity="center"
+                android:layout_gravity="bottom|center"
+                android:layout_height="wrap_content">
+
             <Button
                 android:layout_width="wrap_content"
-                android:text="Detalles del producto"
+                android:text="Detalles\ndel producto"
                 android:background="@drawable/redondo"
                 android:backgroundTint="#000"
                 android:id="@+id/showProducto"
                 android:gravity="center"
+                android:layout_weight="1"
                 android:textColor="#fff"
-                android:elevation="6dp"
-                android:padding="10dp"
                 android:layout_height="wrap_content"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:text="Mapa\ndel cliente"
+                android:layout_weight="1"
+                android:background="@drawable/redondo"
+                android:backgroundTint="#000"
+                android:id="@+id/showMapa"
+                android:layout_marginLeft="5dp"
+                android:textColor="#fff"
+                android:layout_height="wrap_content"/>
+            </LinearLayout>
         </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- ************* SEGUNDA VISTA **************************** -->
 
@@ -462,7 +518,6 @@
             app:shape_diagonal_angle="10"
             app:shape_diagonal_direction="left"
             app:shape_diagonal_position="bottom">
-
             <!-- YOUR CONTENT -->
             <View
                 android:layout_width="match_parent"
@@ -483,15 +538,32 @@
                     android:textAlignment="center"
                     android:layout_height="wrap_content"/>
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginTop="10dp"
-                    android:id="@+id/detalleNumPedido2"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
-                    android:layout_height="wrap_content"/>
+                    android:orientation="horizontal"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:text="#"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:id="@+id/detalleNumPedido2"
+                        android:textColor="#fff"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
@@ -774,18 +846,29 @@
                 android:layout_height="1dp"/>
             <!-- fin Linea de separación -->
 
-            <Button
-                android:layout_width="wrap_content"
-                android:text="Detalles del pedido"
-                android:background="@drawable/redondo"
-                android:backgroundTint="#000"
-                android:id="@+id/showDetalle"
-                android:textColor="#fff"
-                android:drawableLeft="@drawable/ic_arrow_back"
-                android:layout_gravity="bottom|center"
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
                 android:elevation="6dp"
                 android:padding="8dp"
-                android:layout_height="wrap_content"/>
+                android:gravity="center"
+                android:layout_gravity="bottom|center"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:text="Detalles del pedido"
+                    android:background="@drawable/redondo"
+                    android:backgroundTint="#000"
+                    android:id="@+id/showDetalle"
+                    android:textColor="#fff"
+                    android:layout_weight="1"
+                    android:layout_marginRight="5dp"
+                    android:drawableLeft="@drawable/ic_arrow_back"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
 
         </LinearLayout>
         </ScrollView>
