--- a/app/src/main/res/layout/activity_realizar_pedido.xml
+++ b/app/src/main/res/layout/activity_realizar_pedido.xml
@@ -203,7 +203,7 @@
                 <EditText
                     android:id="@+id/nombresProveedor"
                     android:layout_width="match_parent"
-                    android:text="1.-\n2.-\n3.-\n"
+                    android:text="a.\nb.\nc.\n"
                     android:layout_gravity="left"
                     android:textSize="14sp"
                     android:layout_height="match_parent"/>
@@ -228,7 +228,7 @@
                 <EditText
                     android:id="@+id/nombresProducto"
                     android:layout_width="match_parent"
-                    android:text="1.-\n2.-\n3.-\n"
+                    android:text="a.\nb.\nc.\n"
                     android:textSize="14sp"
                     android:layout_gravity="left"
                     android:layout_height="match_parent"/>
@@ -252,7 +252,7 @@
                 <EditText
                     android:id="@+id/descripcion"
                     android:layout_width="match_parent"
-                    android:text="1.-ninguno\n2.-\n3.-\n"
+                    android:text="a.ninguno\nb.\nc.\n"
                     android:textSize="14sp"
                     android:layout_gravity="left"
                     android:layout_height="match_parent"/>
@@ -593,6 +593,11 @@
             <!-- fin Linea de separación -->
 
             <!-- Noveno segmento -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
@@ -609,12 +614,82 @@
                 <EditText
                     android:id="@+id/direcionCliente"
                     android:layout_width="wrap_content"
-                    android:hint="Ejm : Av.2 de mayo 1567"
-                    android:gravity="right"
+                    android:hint="Presione el boton Mapear"
+                    android:gravity="center"
+                    android:textColor="#000"
                     android:textSize="14sp"
                     android:textStyle="bold"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="0dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textSize="14sp"
+                    android:text="latitud:"
+                    android:textColor="#000000"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textSize="14sp"
+                    android:text=""
+                    android:id="@+id/txtLatitud"
+                    android:textColor="#000000"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content">
+
+              <Button
+                  android:layout_width="wrap_content"
+                  android:text="Mapear"
+                  android:id="@+id/btnMapear"
+                  android:layout_weight="3"
+                  android:textColor="#FFF"
+                  android:textStyle="bold"
+                  android:background="@drawable/redondo"
+                  android:backgroundTint="#000"
+                  android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_height="0dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textSize="14sp"
+                    android:text="longitud:"
+                    android:textColor="#000000"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/txtLongitud"
+                    android:layout_width="wrap_content"
+                    android:textSize="14sp"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:layout_marginRight="10dp"
+                    android:layout_height="wrap_content"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
             <!-- Linea de separación -->
             <View
@@ -759,7 +834,7 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="Agrega los puntos de recogida\ndel producto (MAPA)"
+                    android:text="Agrega el punto de ubicacion\ndel Cliente (MAPA)"
                     android:gravity="center"
                     android:textSize="12sp"
                     android:layout_marginBottom="10dp"
@@ -808,7 +883,7 @@
             android:layout_width="wrap_content"
             android:layout_gravity="bottom|start"
             android:layout_margin="6dp"
-            android:src="@drawable/ic_mapa"
+            android:src="@drawable/ic_close"
             app:fabSize="normal"
             app:backgroundTint="#f00"
             app:elevation="6dp"
