--- a/app/src/main/res/layout/row_pedidos.xml
+++ b/app/src/main/res/layout/row_pedidos.xml
@@ -270,6 +270,18 @@
                     android:id="@+id/idDelivery3"
                     android:layout_height="wrap_content"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:visibility="visible"
+                    android:id="@+id/idlatitud"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:visibility="visible"
+                    android:id="@+id/idlongitud"
+                    android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
 <!-- **************************************************************  -->
