--- a/app/src/main/res/layout/activity_notificacion.xml
+++ b/app/src/main/res/layout/activity_notificacion.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:layout_height="match_parent"
     tools:context=".paquetes.Actividades.Notificacion">
 
     <LinearLayout
@@ -22,10 +22,27 @@
             android:layout_gravity="center"
             android:layout_height="180dp"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_marginTop="10dp"
             android:layout_height="wrap_content">
 
             <TextView
@@ -60,6 +77,39 @@
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
             android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="14sp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="Por este pedido ganarás : "
+                android:gravity="center"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#1B6B60"
+                android:textStyle="bold"
+                android:text="S/"
+                android:gravity="center"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/notifyGanancia"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="#1B6B60"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
             android:orientation="vertical"
             android:layout_height="wrap_content">
 
@@ -79,7 +129,6 @@
                 android:textColor="#CB4335"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
-
         </LinearLayout>
 
         <LinearLayout
@@ -139,7 +188,6 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
             android:gravity="center"
             android:padding="10dp"
             android:orientation="horizontal"
@@ -195,13 +243,15 @@
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
+        </LinearLayout>
 
-
-
+        </ScrollView>
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:layout_gravity="bottom|center"
             android:layout_margin="10dp"
             android:layout_height="wrap_content">
 
@@ -209,7 +259,7 @@
                 android:id="@+id/btnVerLista"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:text="Ver lista"
+                android:text="Aceptar"
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:layout_marginRight="5dp"
@@ -221,7 +271,7 @@
                 android:id="@+id/btnCerrar"
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:text="Cerrar"
+                android:text="Rechazar"
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:layout_marginLeft="5dp"
@@ -229,6 +279,8 @@
                 android:backgroundTint="#CB4335"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+    </LinearLayout>
+
     </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
