--- a/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
@@ -431,11 +431,11 @@
 
                     <TextView
                         android:id="@+id/detallevRepartidor"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:textColor="#000"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:layout_height="0dp"/>
+                        android:layout_height="wrap_content"/>
 
                 </LinearLayout>
 
