--- a/app/src/main/res/layout/activity_lista_de_pedidos.xml
+++ b/app/src/main/res/layout/activity_lista_de_pedidos.xml
@@ -14,6 +14,8 @@
         android:id="@+id/searchPedidos"
         app:queryHint="Buscar pedido.."
         app:iconifiedByDefault="false"
+        android:textStyle="bold"
+        android:fontFamily="@font/futura"
         android:layout_margin="10dp"
         android:layout_height="?attr/actionBarSize"/>
 
