--- a/app/src/main/res/layout/activity_notificacion.xml
+++ b/app/src/main/res/layout/activity_notificacion.xml
@@ -7,6 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".paquetes.Actividades.Notificacion">
 
+    <TextView
+        android:layout_width="0dp"
+        android:visibility="invisible"
+        android:id="@+id/nombreAukdeliver"
+        android:layout_height="0dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
@@ -51,6 +57,14 @@
                 android:textColor="#000"
                 android:textStyle="bold"
                 android:text="Nuevo Pedido "
+                android:gravity="center"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:text="#"
                 android:gravity="center"
                 android:layout_height="wrap_content"/>
             <TextView
