--- a/app/src/main/res/layout/toolbar2.xml
+++ b/app/src/main/res/layout/toolbar2.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#000000"
+        android:textStyle="bold"
+        android:fontFamily="@font/futura"
         app:theme="@style/toolbarTheme"
         android:id="@+id/toolbar"/>
 
